@@ -44,7 +44,7 @@ The value returned is a list object of class \code{fsvsim} holding
  \itemize{
  \item{y}{The simulated data, stored in a \code{n} times \code{m} matrix with
  colnames 'Sim1', 'Sim2', etc.}
- \item{f}{The simulated factors, stored in a \code{r} times \code{r} matrix.}
+ \item{fac}{The simulated factors, stored in a \code{r} times \code{r} matrix.}
  \item{facload}{Factor loadings matrix.}
  \item{facvol}{Latent factor log-variances for times 1 to \code{n}.}
  \item{facvol0}{Initial factor log-variances for time 0.}
