@@ -1,4 +1,3 @@
-- TODO: rename output values of fsvsample
 - TODO: Allow also for ones in the loadings matrix a priori (not only zeros)
 - TODO: Preparation works for including the leverage effect that became
         available in stochvol 2.0.0.
@@ -13,6 +12,8 @@ Changes in version 0.9.2
     this out. Moreover, "startlatent" and "startlatent0" were renamed to
     "startlogvar" and "startlogvar0", respectively. Sorry for any inconvenience
     this change may cause.
+  - The result values of fsvsample were slightly renamed and reordered:
+    f -> fac; h -> logvar; h0 -> logvar0
   - It's now possible to turn factor sampling off. This might be useful if one
     wants to include observed factors (instead of latent ones).
   - The function predloglik now takes an optional logical vector indicating
